# ggx_filtering

./: .gitignore  note.md
cpp_test/: CMakeLists.txt  GGX.cpp  bilinear_sample_process.glsl  compute_shader.cpp  compute_shader.h  gl_test.cpp  opencv_test.cpp  render_test.cpp  shader.cpp
cpp_test/include/: GGX.h  camera.h  shader.h  util.h
cpp_test/powit_test/: dj_brdf.h
cpp_test/shader_program/: env_map_fragment.glsl  env_map_vertex.glsl  push_back.glsl  shader_test.glsl  sphere_fragment.glsl  sphere_vertex.glsl
py_test/: LBFGS.py  coefficient.py  filter.py  ggx_example.py  image_read.py  interpolation.py  map_util.py  mat_util.py  material.py  optimization.py  optimization_ggx_torch.py  optimization_merl_torch.py  optmization_torch.py  read_log.py  reference.py  specular.py  test.py  torch_util.py  torch_util_all_locations.py  validation.py  visualization.py
py_test/cpp_lib/: MerlBRDF.cpp  dj_brdf.cpp
